name:          arcade
category:      Game
version:       0.1
license:       BSD3
cabal-version: >= 1.6
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/arcade/
bug-reports:   http://github.com/ekmett/arcade/issues
copyright:     Copyright (C) 2012 Edward A. Kmett
synopsis:      Haskell Arcade
description:   Haskell Arcade
build-type:    Custom
extra-source-files: resources/*.icn

source-repository head
  type: git
  location: git://github.com/ekmett/arcade.git

flag development
  description: build web services in development (interpreted) mode
  default: False

library
  exposed-modules:
    Arcade.Game

  build-depends:
    base                      == 4.*,
    bytestring                >= 0.9.1 && < 0.10,
    containers                >= 0.3   && < 0.6,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2.1.1 && < 2.2,
    snap                      >= 0.9   && < 0.10,
    snap-core                 >= 0.9   && < 0.10,
    websockets                == 0.6.*,
    websockets-snap           == 0.6.*,
    transformers              >= 0.2   && < 0.4

  other-extensions:
    ForeignFunctionInterface

  hs-source-dirs: src

  ghc-options: -Wall -threaded -fwarn-tabs
  if flag(development)
    ghc-options: -w
    cpp-options: -DDEVELOPMENT
  else
    ghc-options: -funbox-strict-fields -O2

executable arcade
  other-modules:
    Main
    Arcade.Game

  build-depends:
    base                      == 4.*,
    bytestring                >= 0.9.1 && < 0.10,
    cabal-macosx              >= 0.2.2 && < 0.3,
    containers                >= 0.3   && < 0.6,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl                       >= 2.1.1 && < 2.2,
    OpenGL                    >= 2.2.3.1 && < 2.6,
    SDL                       >= 0.6.3 && < 0.7,
    snap                      >= 0.9   && < 0.10,
    snap-core                 >= 0.9   && < 0.10,
    snap-server               >= 0.9   && < 0.10,
    websockets                == 0.6.*,
    websockets-snap           == 0.6.*,
    transformers              >= 0.2   && < 0.4

  other-extensions: ForeignFunctionInterface

  hs-source-dirs: src client
  main-is: HSMain.hs
  extra-libraries: SDLmain
  c-sources: client/main.c
  includes: client/HSMain_stub.h
  ghc-options: -Wall -threaded -fwarn-tabs -no-hs-main
  if flag(development)
    build-depends: snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    ghc-options: -w
  else
    ghc-options: -funbox-strict-fields -O2
  if impl(ghc >= 6.12.0)
    ghc-options: -fno-warn-unused-do-bind
